--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "@types/ms": "^0.7.31",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "postcss": "^8.4.21",
