--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@prisma/client": "^4.8.1",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
-    "@rainbow-me/rainbowkit": "^0.8.1",
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -55,7 +55,7 @@
     "sass": "^1.58.1",
     "typescript": "4.9.4",
     "use-debounce": "^9.0.3",
-    "wagmi": "^0.10.10"
+    "wagmi": "0.11.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
