--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "focus-trap-react": "^10.0.2",
     "framer-motion": "^8.4.2",
     "graphql": "^16.6.0",
+    "ipfs-core": "^0.18.0",
     "lucide-react": "0.105.0-alpha.4",
     "ms": "^2.1.3",
     "next": "13.1.1",
