--- a/localPackages/nouns-builder-components/package.json
+++ b/localPackages/nouns-builder-components/package.json
@@ -2,7 +2,7 @@
   "name": "nouns-builder-components",
   "description": "React hooks and components for Nouns Builder DAOs",
   "license": "MIT",
-  "version": "0.0.0",
+  "version": "0",
   "contributors": [
     "ripe0x.eth <unripeengine@gmail.com>",
     "badublanc.eth <badu@hey.com>"
@@ -14,16 +14,14 @@
     "@zoralabs/zorb": "^0.1.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
-    "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.5",
-    "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^3.1.0",
-    "react-responsive": "^9.0.2",
-    "sass": "^1.58.1"
+    "use-prop-house": "^0.1.3",
+    "react-responsive": "^9.0.2"
   },
   "peerDependencies": {
     "@rainbow-me/rainbowkit": "^0.8.1",
-    "ethers": ">=5.5.1",
+    "ethers": "^5.7.2",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0",
     "wagmi": "0.9.x"
