--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "concurrently \"npm run dev:css\" \"next dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/input.css -o styles/app.css",
+    "build": "npm run build:css && next build",
+    "build:css": "tailwindcss -m -i ./styles/input.css -o styles/app.css",
     "format:write": "prettier --write \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "format": "prettier \"**/*.{css,js,json,jsx,ts,tsx}\"",
     "start": "next start",
@@ -17,6 +19,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "13.1.1",
     "@prisma/client": "^4.8.1",
+    "use-prop-house": "^0.1.3",
     "@radix-ui/react-popover": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@rainbow-me/rainbowkit": "^0.11.0",
